--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
       box-shadow:0 30px 80px rgba(0,0,0,.45)
     }
     .sysline{color:#c4cad4;background:#0e1116;border:1px dashed #283140;border-radius:12px;padding:12px 16px}
-    .scroll{overflow:auto;border-radius:14px;background:#0d1218;border:1px solid var(--border);padding:14px;display:grid;gap:12px}
+    .scroll{
+      overflow:auto;
+      border-radius:14px;
+      background:#0d1218;
+      border:1px solid var(--border);
+      padding:14px;
+      display:grid;
+      gap:12px;
+      overflow-y: auto;  /* vertical scroll only */
+      min-height: 0;}
     .msg{padding:12px 16px;border-radius:14px;line-height:1.55;max-width:80%}
     .me{justify-self:end;background:var(--bubble-me)}
     .bot{justify-self:start;background:var(--bubble-bot)}
