--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <div class="footer">Created by <a href="https://www.linkedin.com/in/awaiz-ahmed/" target="_blank" rel="noopener">Awaiz Ahmed</a></div>
+    <div class="footer">Created by <a href="https://www.linkedin.com/in/awaiz-ahmed/" target="_blank" rel="noopener">Awaiz Ahmed & Yumna Salaas</a></div>
   </div>
 
   <script>
@@ -97,6 +97,7 @@
     const $ = s => document.querySelector(s);
     const log = $('#log'), input = $('#input'), sendBtn = $('#send');
     const toggleBtn = $('#toggle'), voiceStatus = $('#vstat');
+    const SHOW_DIAGS = false;
 
     function push(role, text, cls=''){
       const div = document.createElement('div');
@@ -264,7 +265,7 @@
     // If user starts talking while TTS is speaking, interrupt speech and switch to listening
     document.addEventListener('visibilitychange',()=>{}); // no-op; keeps audio context warm
     // Minimal diagnostics for Double
-    (function(){
+    if (SHOW_DIAGS) (function(){
       const el = document.createElement('div');
       el.style.cssText = 'position:fixed;left:12px;bottom:12px;z-index:9999;background:#0f172a;color:#e5e7eb;border:1px solid #334155;border-radius:12px;padding:12px 14px;font:12px/1.3 system-ui;max-width:420px';
       el.innerHTML = `
