--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       color:var(--text); font-family:'Montserrat',system-ui,Segoe UI,Roboto,sans-serif;
       overflow:hidden; /* page never scrolls */
     }
-    .wrap{height:100%;display:grid;grid-template-rows:auto 1fr auto;gap:12px;padding:18px}
+    .wrap{height:100%;display:grid;grid-template-rows:auto 1fr auto;gap:12px;padding:18px;  min-height:0;} 
     .topbar{display:flex;align-items:center;gap:14px;justify-content:center}
     .logo{height:80px;object-fit:contain;filter:drop-shadow(0 8px 24px rgba(0,0,0,.45))}
     .pill{display:inline-flex;align-items:center;gap:10px;padding:12px 18px;border-radius:999px;background:var(--accent);color:#fff;font-weight:800;cursor:pointer;box-shadow:0 10px 30px rgba(0,0,0,.35)}
@@ -36,19 +36,21 @@
       display:grid;grid-template-rows:auto 1fr auto;gap:14px;
       background:rgba(16,18,24,.4);backdrop-filter:blur(6px);
       border:1px solid #1e2430;border-radius:18px;padding:16px 16px 14px;
-      box-shadow:0 30px 80px rgba(0,0,0,.45)
+      box-shadow:0 30px 80px rgba(0,0,0,.45); min-height:0; 
     }
     .sysline{color:#c4cad4;background:#0e1116;border:1px dashed #283140;border-radius:12px;padding:12px 16px}
     .scroll{
-      overflow:auto;
+      overflow-y:auto;           /* was overflow:auto — fine too */
+      min-height:0;              /* NEW */
+      -webkit-overflow-scrolling:touch;  /* optional */
+      overscroll-behavior:contain;       /* optional */
       border-radius:14px;
       background:#0d1218;
       border:1px solid var(--border);
       padding:14px;
       display:grid;
       gap:12px;
-      overflow-y: auto;  /* vertical scroll only */
-      min-height: 0;}
+      }
     .msg{padding:12px 16px;border-radius:14px;line-height:1.55;max-width:80%}
     .me{justify-self:end;background:var(--bubble-me)}
     .bot{justify-self:start;background:var(--bubble-bot)}
