--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     .card{
       height:100%;max-width:1260px;margin:0 auto;width:100%;
-      display:grid;grid-template-rows:auto auto auto;gap:14px;
+      display:grid;grid-template-rows:auto 1fr auto;gap:14px;
       background:rgba(16,18,24,.4);backdrop-filter:blur(6px);
       border:1px solid #1e2430;border-radius:18px;padding:16px 16px 14px;
       box-shadow:0 30px 80px rgba(0,0,0,.45); min-height:0; 
